--- a/app/src/main/res/layout-sw600dp-land/activity_add_property.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_add_property.xml
@@ -102,6 +102,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/activity_add_property_price_et"
+                    android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                     style="@style/editText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -182,6 +183,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_surface_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -213,6 +215,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_rooms_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -244,6 +247,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_bathrooms_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -275,6 +279,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_bedrooms_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -314,6 +319,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_address_line1_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -334,6 +340,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_address_line2_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -354,6 +361,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_address_city_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -375,6 +383,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_address_postal_code_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="@dimen/activity_add_property_postal_code_width"
                         android:layout_height="wrap_content"
@@ -393,6 +402,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_address_country_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -450,10 +460,8 @@
                         app:layout_constraintStart_toEndOf="@id/activity_add_property_point_of_interest_iv"
                         app:layout_constraintTop_toBottomOf="@+id/activity_add_property_point_of_interest_tv" />
 
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
-
 
             <ImageView
                 android:id="@+id/activity_add_property_description_iv"
@@ -469,6 +477,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_description_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -521,6 +530,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_agent_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -559,6 +569,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/activity_add_property_sold_date_et"
+                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                         style="@style/editText"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
