--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -79,6 +79,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_price_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -141,6 +142,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_surface_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -173,6 +175,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_rooms_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -204,6 +207,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_bathrooms_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -235,6 +239,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_bedrooms_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -266,6 +271,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_description_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -300,6 +306,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_address_line1_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -321,6 +328,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_address_line2_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -341,6 +349,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_address_city_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -362,6 +371,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_address_postal_code_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="@dimen/activity_add_property_postal_code_width"
                 android:layout_height="wrap_content"
@@ -380,6 +390,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_address_country_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -443,6 +454,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_agent_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -475,6 +487,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/activity_add_property_sold_date_et"
+                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
