--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -5,33 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/fragment_list_item_card_iv"
+    <com.openclassrooms.realestatemanager.views.PropertyCardView
+        android:id="@+id/fragment_list_item_pcv"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        app:sold="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardUseCompatPadding="true">
-
-        <ImageView
-            android:id="@+id/fragment_list_item_iv"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            tools:srcCompat="@sample/properties"
-            android:contentDescription="@string/property_picture" />
-
-        <TextView
-            android:id="@+id/fragment_list_item_sold_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorAccent"
-            android:fontFamily="@font/roboto_bold"
-            android:gravity="center"
-            android:text="@string/sold"
-            android:textColor="@color/white" />
-    </androidx.cardview.widget.CardView>
+        app:cardUseCompatPadding="true"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -39,10 +20,10 @@
         android:orientation="vertical"
         android:paddingHorizontal="10dp"
         android:gravity="center_vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_item_card_iv"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_list_item_pcv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_list_item_card_iv"
-        app:layout_constraintTop_toTopOf="@+id/fragment_list_item_card_iv">
+        app:layout_constraintStart_toEndOf="@+id/fragment_list_item_pcv"
+        app:layout_constraintTop_toTopOf="@+id/fragment_list_item_pcv">
 
         <TextView
             android:id="@+id/fragment_list_item_type_tv"
