--- a/app/src/main/res/layout-land/activity_add_property.xml
+++ b/app/src/main/res/layout-land/activity_add_property.xml
@@ -96,7 +96,8 @@
                     android:id="@+id/activity_add_property_price_et_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="numberSigned|number" />
+                    android:inputType="numberSigned|number"
+                    android:nextFocusDown="@id/activity_add_property_surface_et_input"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <ImageButton
